adjust banner width on mobile. fixes #3548

--- a/frontend/src/app/containers/ExperimentPage/index.scss
+++ b/frontend/src/app/containers/ExperimentPage/index.scss
@@ -12,7 +12,7 @@
   & .experiment-icon-wrapper {
     border-radius: 0;
     height: 80px;
-    width: 200%;
+    width: 109%;
   }
 
   .experiment-icon {
